# paperium

./: .gitignore  CLAUDE.md  README.md  config.py  paper.md  presentation.md  project-knowledge.md  pyproject.toml  run.py  tbl_params.txt
data/: blacklist.py  fetcher.py  intraday_fetcher.py  storage.py  universe.py
ml/: ensemble.py  features.py  meta_labeling.py  model.py  xgb_inference.py
scripts/: analyze.py  analyze_hour0.py  auto_train.py  clean_universe.py  download_ihsg.py  eod_retrain.py  eval.py  eval_ensemble.py  ml_backtest.py  morning_signals.py  optimize_tbl.py  plot_training.py  signals.py  sync_data.py  test_intraday.py  train.py  train_model.py  train_progressive.py  tune_lstm.py  view_training.py
signals/: combiner.py  regime_detector.py  screener.py  statistical.py  supply_demand.py  technical.py
strategy/: adaptive_exits.py  exit_manager.py  kelly_sizer.py  position_manager.py  position_sizer.py
utils/: __init__.py  logger.py
