[project]
name = "ihsg-quant-trading"
version = "1.0.0"
description = "Jim Simons-inspired quantitative trading model for Indonesian stocks (IHSG)"
requires-python = ">=3.12"

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy==1.26.4",
    "scikit-learn>=1.3.0",
    "xgboost==2.1.3",
    "ta>=0.11.0",
    "arch>=6.0.0",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8"
]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
morning = "scripts.morning_signals:main"
eod = "scripts.eod_retrain:main"
backtest = "main:run_backtest_cli"
