[project]
name = "paperium"
version = "2.1.0"
description = "Indonesia Stock Exchange (IHSG) Deep Learning Trading System"
requires-python = ">=3.12"

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy==1.26.4",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
morning = "scripts.morning_signals:main"
eod = "scripts.eod_retrain:main"
backtest = "main:run_backtest_cli"
